# gilperchess

./: .gitignore  CMakeLists.txt  README.md  build.cmake
nnue/training/: .gitignore  Cargo.toml
nnue/training/src/: main.rs
src/: board.c  board.h  eval.c  eval.h  hashtable.c  hashtable.h  main.c  move_gen.c  move_gen.h  move_select.c  move_select.h  nnue.c  nnue.h  perft.h  search.c  search.h  types.c  types.h  uci.c  uci.h  utils.c  utils.h
test/: run_sprt.py
